logs/assign-gup.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Assign_GUP'...
Compiling './lib/python3.5/site-packages/Assign_GUP/agup_data.py'...
***   File "./lib/python3.5/site-packages/Assign_GUP/agup_data.py", line 263
    print agup
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Assign_GUP/email_template.py'...
***   File "./lib/python3.5/site-packages/Assign_GUP/email_template.py", line 132
    print et.mail_merge(**REVIEWER_FIELDS)
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Assign_GUP/history.py'...
***   File "./lib/python3.5/site-packages/Assign_GUP/history.py", line 125
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Assign_GUP/resources'...
Compiling './lib/python3.5/site-packages/Assign_GUP/reviewer_details.py'...
***   File "./lib/python3.5/site-packages/Assign_GUP/reviewer_details.py", line 180
    print 'getFullName', mw.getFullName()
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Assign_GUP/settings.py'...
***   File "./lib/python3.5/site-packages/Assign_GUP/settings.py", line 254
    print ss
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Assign_GUP-2017.4.0.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyRestTable'...
Listing './lib/python3.5/site-packages/pyRestTable-2017.2.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
